# jsonrpc-nats-rs

./: Cargo.toml  README.md  UPGRADE_ASSESSMENT.md  UPGRADE_CHECKLIST.md  UPGRADE_SUMMARY.md  justfile
jsonrpc/: Cargo.toml
jsonrpc-derive/: Cargo.toml
jsonrpc-derive/src/: client.rs  lib.rs
jsonrpc-ipc/: Cargo.toml
jsonrpc-ipc/src/: client.rs  impls.rs  lib.rs  request.rs  server.rs  service.rs
jsonrpc-ipc/src/server/: endpoint_old.rs  handle.rs
jsonrpc-ipc/src/service/: endpoint.rs
jsonrpc-nats/: Cargo.toml
jsonrpc-nats-client/: Cargo.toml
jsonrpc-nats-client/src/: lib.rs
jsonrpc-nats-server/: Cargo.toml
jsonrpc-nats-server/src/: lib.rs
jsonrpc-nats/src/: client.rs  lib.rs  server.rs
jsonrpc-nats/src/server/: handle.rs
jsonrpc-nats/tests/: README.md  integration_test.rs
jsonrpc/src/: client.rs  error.rs  lib.rs  request.rs  response.rs  server.rs  service.rs  transport.rs
pingpong/: Cargo.toml
pingpong/src/: client.rs  count.rs  main.rs  multiarg.rs  pingpong.rs  server.rs  simple.rs
pingpong/src/pingpong/: impls.rs
tower-jsonrpc/: Cargo.toml
tower-jsonrpc/src/: lib.rs
