[workspace]
members = ["jsonrpc", "jsonrpc-nats", "jsonrpc-derive", "pingpong"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0"
async-nats = { version = "0.32", features = ["experimental"] }
async-trait = "0.1"
bytes = "1.5"
darling = "0.20"
futures = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2", features = ["full", "parsing"] }
tap = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"


jsonrpc = { path = "./jsonrpc" }
jsonrpc-nats = { path = "./jsonrpc-nats" }
jsonrpc-derive = { path = "./jsonrpc-derive" }


[workspace.lints.clippy]
use_self = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"


[workspace.lints.rust]
deprecated_in_future = "warn"
future_incompatible = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
unused = "warn"
warnings = "deny"
