[workspace]
members = [
    "jsonrpc",
    "jsonrpc-nats",
    "jsonrpc-derive",
    "pingpong",
    "jsonrpc-ipc",
]
resolver = "2"


[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.76.0"


[workspace.dependencies]
anyhow = "1.0"
async-nats = { version = "0.46", features = ["service"] }
bytes = "1.5"
darling = "0.23"
futures = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"

jsonrpc = { path = "./jsonrpc" }
jsonrpc-ipc = { path = "./jsonrpc-ipc" }
jsonrpc-nats = { path = "./jsonrpc-nats" }
jsonrpc-derive = { path = "./jsonrpc-derive" }


[workspace.lints.clippy]
use_self = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"


[workspace.lints.rust]
deprecated_in_future = "warn"
future_incompatible = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
unused = "warn"
warnings = "deny"
