[package]
name = "jsonrpc-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

jsonrpc.workspace = true


[lints]
workspace = true
