[package]
name = "jsonrpc-nats-server"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
async-nats.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

jsonrpc.workspace = true


[lints]
workspace = true
