[package]
name = "jsonrpc-nats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
anyhow.workspace = true
async-nats.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

jsonrpc.workspace = true


[lints]
workspace = true
