[package]
name = "jsonrpc"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true


[dependencies]
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tap.workspace = true
thiserror.workspace = true
tracing.workspace = true

jsonrpc-derive.workspace = true

[lints]
workspace = true
