[package]
name = "jsonrpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

jsonrpc-derive.workspace = true

[lints]
workspace = true
