[package]
name = "pingpong"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true

jsonrpc.workspace = true
jsonrpc-nats.workspace = true

clap = { version = "4.4", features = ["derive", "deprecated"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }


[lints]
workspace = true
